# Alexandria

./: .behaverc  .coveragerc  .env.local  .gitattributes  .gitignore  404.html  Dockerfile  Makefile  README.md  compose.yaml  conftest.py  index.html  manage.py  postgres.Dockerfile  pyproject.toml  pytest.ini  raw_gutenberg_data  retype.yml  robots.txt  sonar-project.properties  test.txt
.github/: pull_request_template.md
.github/workflows/: bump-version.yml  code-analysis.yml  codeql.yml  retype.yml  tests.yml
alexandria/: README.md  backends.py  configs.py  context_processors.py  default.json  errors.py  middleware.py  settings.py  shell_plus_extras.py  urls.py  wsgi.py
alexandria/api/: apps.py  authentication.py  serializers.py  urls.py  views.py
alexandria/catalog/: apps.py  forms.py  helpers.py  urls.py  views.py
alexandria/distributed/: admin.py  apps.py  configs.py  default.json  middleware.py  models.py  tests.py
alexandria/integrations/: README.md  apps.py
alexandria/money/: apps.py  readme.md
alexandria/receipts/: admin.py  apps.py  models.py
alexandria/records/: admin.py  apps.py  forms.py  marc.py  mixins.py  models.py  openlibrary.py  urls.py  zenodotus_utils.py
alexandria/searchablefields/: apps.py  mixins.py  strings.py
alexandria/settings/: base.py  local.py  prod.py  routing.py  testing.py
alexandria/tests/: helpers.py  test_authentication.py  test_holds.py  test_user_accounts.py
alexandria/users/: admin.py  apps.py  forms.py  helpers.py  models.py  urls.py
alexandria/utils/: __init__.py  abebooks.py  apps.py  db.py  decorators.py  gutenberg.py  images.py  lazy.py  models.py  permissions.py  test_helpers.py  type_hints.py  views.py
catalog/: admin.py  forms.py  helpers.py  marc.py  models.py  openlibrary.py  readme.md  tests.py  urls.py  views.py  zenodotus_utils.py
catalog/migrations/: 0001_initial.py  0002_auto_20210207_0533.py  0002_auto_20210208_0214.py  0003_auto_20210207_0619.py  0003_item_bibliographic_level.py  0004_auto_20210207_0621.py  0004_record_image.py  0005_auto_20210207_2111.py  0005_auto_20210212_0156.py  0006_record_type.py  0007_item_type.py  0008_auto_20210216_0452.py  0009_auto_20210216_0455.py  0010_auto_20210218_0146.py  0011_record_bibliographic_level.py  0012_item_edition.py  0013_auto_20210221_2156.py  0014_record_summary.py  0015_auto_20210524_0422.py  0016_auto_20210629_0405.py  0017_auto_20210629_0407.py  0018_auto_20210703_0404.py  0019_auto_20210703_0503.py  0020_item_status.py  0021_itemtype_icon_name.py  0022_itemtype_icon_svg.py  0023_remove_item_status.py  0024_auto_20211104_0033.py  0025_auto_20211105_0044.py  0026_alter_item_last_checked_out.py  0027_alter_item_last_checked_out.py  0028_alter_item_options.py  0029_auto_20211121_0642.py  0030_record_searchable_uniform_title.py
configuration/: index.html
configuration/custom_receipts/: index.html
contributing_code/: index.html
contributing_code/environment_setup/: index.html
contributing_code/getting_it_running/: index.html
contributing_code/install_psql_locally/: index.html
contributing_code/using_alexandria_locally/: index.html
contributing_docs/: index.html
contributing_docs/best_practices/: index.html
contributing_docs/doc_layout/: index.html
contributing_docs/example_page/: index.html
contributing_docs/installing_retype/: index.html
deploying_alexandria/: index.html
development/: index.html
development/getting_started/: index.html
docs/: index.md
docs/configuration/: custom_receipts.md  readme.md
docs/contributing/: documentation.md  environment_setup.md  getting_started.md  install_psql_locally.md  readme.md  using_alexandria_locally.md
docs/contributing_code/: environment_setup.md  getting_it_running.md  install_psql_locally.md  readme.md  using_alexandria_locally.md
docs/contributing_docs/: best_practices.md  doc_layout.md  example_page.md  installing_retype.md  readme.md
docs/deploying_alexandria/: readme.md
docs/development/: getting_started.md  readme.md
extra/: Untitled.xcf
general/: apps.py
general/templatetags/: format_toast.py  multiply.py
holds/: admin.py  apps.py  models.py  urls.py  views.py
holds/migrations/: 0001_initial.py  0002_hold_pull_any_same_type.py  0003_remove_hold_destination.py  0004_hold_destination.py  0005_remove_hold_pull_any_same_type.py  0006_hold_requested_item_type.py  (+7 more)
media/: models.py  readme.md
payments/: readme.md
selfcheckout/: apps.py
staff/: forms.py  urls.py  views.py
tags/: index.html
templates/: 400.html  403.html  404.html  500.html  base.partial  components.yml  error_base.html  generic_form.html  staff_base.partial  test.html
users/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
utils/: __init__.py  apps.py  context.py  db.py  decorators.py  images.py  permissions.py  strings.py  views.py
(+266 files in other folders)
