[tool.poetry]
name = "alexandria"
version = "0.16.0"
description = "Bespoke. Books. Battlestar Galactica."
authors = ["Joe Kaufeld <joe.kaufeld@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0"
django-localflavor = "^3.0.1"
Pillow = "^8.1.0"
requests = "^2.25.1"
pymarc = "^4.0.0"
django-widget-tweaks = "^1.4.8"
gunicorn = "^20.0.4"
slippers = "^0.3.0"
django-extensions = "^3.1.3"
django-mathfilters = "^1.0.0"
django-anymail = {extras = ["mailgun"], version = "^8.4"}
django-decorator-include = "^3.0"
django-taggit = {git = "https://github.com/jazzband/django-taggit.git"}

[tool.poetry.dev-dependencies]
better_exceptions = "^0.2.2"
black = "^20.8b1"
pytest = "^6.2.2"
pytest-django = "^4.1.0"
coverage = "^5.5"
pytest-cov = "^2.11.1"
behave = "^1.2.6"
selenium = "^3.141.0"
behave-webdriver = "^0.3.0"
pdbpp = "^0.10.2"
behave-django = "^1.4.0"
mimesis = "^5.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
