[tool.poetry]
name = "alexandria"
version = "0.51.0"
description = "Bespoke. Books. Battlestar Galactica."
authors = ["Joe Kaufeld <alexandria@joekaufeld.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0"
django-localflavor = "^3.0.1"
Pillow = "^9.0.1"
requests = "^2.25.1"
pymarc = "^4.0.0"
django-widget-tweaks = "^1.4.8"
gunicorn = "^20.0.4"
slippers = "^0.3.0"
django-extensions = "^3.1.3"
django-mathfilters = "^1.0.0"
django-anymail = { extras = ["mailgun"], version = "^8.4" }
django-decorator-include = "^3.0"
django-taggit = { git = "https://github.com/jazzband/django-taggit.git" }
django-debug-toolbar = "^3.2.4"
djangorestframework = "^3.13.1"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
better_exceptions = "^0.2.2"
black = "^20.8b1"
pytest = "^6.2.2"
pytest-django = "^4.1.0"
coverage = "^5.5"
pytest-cov = "^2.11.1"
pdbpp = "^0.10.2"
mimesis = "^5.1.0"
wheel = "^0.37.1"
pytest-mock = "^3.7.0"
isort = "^5.10.1"
pytest-xdist = "^2.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "alexandria.settings.testing"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--nomigrations --cov=. --cov-report=html --cov-report=term:skip-covered -p no:warnings --ignore=postgres_data"

[tool.coverage.run]
omit = [
    ".venv/*",
    "*tests/*",
    "manage.py",
    "*migrations*",
    "*/static/*",
    "*/static_dev/*",
    "*/media/*",
    "local_settings.py,",
    "*/urls.py",
    "*/wsgi.py",
    "alexandria/settings/*",
    "alexandria/conftest.py",
    "*/management/commands/*",
    "alexandria/middleware.py",
    "alexandria/records/zenodotus_utils.py",
    "alexandria/utils/abebooks.py",
    "alexandria/utils/gutenberg.py"
]
