[project]
name = "alexandria"
version = "0.59.0"
description = "Bespoke. Books. Battlestar Galactica."
authors = [{ name = "Joe Kaufeld", email = "alexandria@joekaufeld.com" }]
requires-python = ">=3.14,<4"
dependencies = [
    "django",
    "django-localflavor",
    "Pillow",
    "requests",
    "pymarc",
    "django-widget-tweaks",
    "gunicorn",
    "slippers",
    "django-extensions",
    "django-mathfilters",
    "django-anymail[mailgun]",
    "django-decorator-include",
    "django-taggit",
    "django-debug-toolbar",
    "djangorestframework",
    "psycopg2-binary",
    "rich",
    "django-htmx",
    "typing-extensions",
]

[dependency-groups]
dev = [
    "better_exceptions",
    "pytest",
    "pytest-django",
    "coverage",
    "pytest-cov",
    "mimesis",
    "wheel",
    "pytest-mock",
    "isort",
    "pytest-xdist",
    "black",
    "djade>=1.7.0",
]

[tool.uv]
package = false

[tool.uv.sources]
django-taggit = { git = "https://github.com/jazzband/django-taggit.git" }

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "alexandria.settings.testing"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--nomigrations --cov=. --cov-report=html --cov-report=term:skip-covered -p no:warnings --ignore=postgres_data"

[tool.coverage.run]
omit = [
    ".venv/*",
    "*tests/*",
    "manage.py",
    "*migrations*",
    "*/static/*",
    "*/static_dev/*",
    "*/media/*",
    "local_settings.py",
    "*/urls.py",
    "*/wsgi.py",
    "alexandria/settings/*",
    "alexandria/conftest.py",
    "*/management/commands/*",
    "alexandria/middleware.py",
    "alexandria/shell_plus_extras.py",
    "alexandria/records/zenodotus_utils.py",
    "alexandria/utils/abebooks.py",
    "alexandria/utils/gutenberg.py",
    "alexandria/utils/type_hints.py",
]
